# susan_description

./: CMakeLists.txt  README.md  package.xml
launch/: description.launch  display.launch
meshes/: 4310__ver_b0001_1_1_1.stl  amazing_nut.stl  amerigo_connector.stl  b3b-eh.stl  bracket_type_a.stl  bracket_type_b.stl  bracket_type_c.stl  bracket_type_d.stl  bracket_type_e.stl  bracket_type_f.stl  bracket_type_g.stl  bracket_type_h.stl  bts2_m2_6x8.stl  carbon_fiber_tube_50*54*126.425.stl  carbon_fiber_tube_50*54*16.7.stl  circuit_board.stl  cover.stl  dc15_a01_idle_cap_dummy.stl  dm4310_bottom.stl  dm4310_output_type_a.stl  dm4310_output_type_b.stl  dm4310_output_type_c.stl  dm_4340_3d_1_1_1.stl  finger_elastomer.stl  fixed_circuit_board_for_force_sensor.stl  m2_1_1.stl  m3_1_1.stl  mg6012-i36v3-1.stl  mg6012-i36v3-10.stl  mg6012-i36v3-11.stl  mg6012-i36v3-12.stl  mg6012-i36v3-13.stl  mg6012-i36v3-14.stl  mg6012-i36v3-15.stl  mg6012-i36v3-16.stl  mg6012-i36v3-17.stl  mg6012-i36v3-18.stl  mg6012-i36v3-19.stl  mg6012-i36v3-2.stl  mg6012-i36v3-20.stl  (+30 more)
rviz/: urdf_viewer.rviz
urdf/: susan_description.xacro
