<package format="2">
  <name>susan_description</name>
  <version>0.1.0</version>
  <description>
    <p>URDF Description package for Suansuan</p>
  </description>

  <maintainer email="hanzx@u.northwestern.edu">Zhengxiao Han</maintainer>
  <author email="hanzx@u.northwestern.edu">Zhengxiao Han</author>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <export>
    <architecture_independent />
  </export>
</package>
